tests/invalid_tests/missing_array_dimension.minijava
class ArrayNoSize {
    public static void main() {
        int[] arr;
        arr = new int[];
    }
}
